--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,3 +10,7 @@ version = "0.1.0"
 
 [dev-dependencies]
 flate2 = "1.0.25"
+noodles = { version = "0.35.0", features = ["core", "fasta"] }
+
+[dependencies]
+rust-lapper = "1.1.0"
