--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,9 @@ name = "chainfile"
 rust-version = "1.68.0"
 publish = true
 description = "A crate for working with genomics chain files."
+homepage = "https://github.com/stjude-rust-labs/chainfile"
+repository = "https://github.com/stjude-rust-labs/chainfile"
+documentation = "https://docs.rs/chainfile"
 version = "0.2.0"
 
 [dev-dependencies]
