--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Update Rust
-        run: rustup update stable && rustup default stable
+        run: rustup update nightly && rustup default nightly 
       - name: Install rustfmt
         run: rustup component add rustfmt
       - run: cargo fmt -- --check
@@ -18,7 +18,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Update Rust
-        run: rustup update stable && rustup default stable
+        run: rustup update nightly && rustup default nightly 
       - name: Install clippy
         run: rustup component add clippy
       - run: cargo clippy --all-features -- --deny warnings
@@ -28,5 +28,5 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Update Rust
-        run: rustup update stable && rustup default stable
+        run: rustup update nightly && rustup default nightly 
       - run: cargo test --all-features
