--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,6 +1,10 @@
 name: CI
 
-on: [push, pull_request]
+on:
+  push:
+    branches:
+      - main
+  pull_request:
 
 jobs:
   format:
@@ -8,7 +12,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Update Rust
-        run: rustup update nightly && rustup default nightly 
+        run: rustup update nightly && rustup default nightly
       - name: Install rustfmt
         run: rustup component add rustfmt
       - run: cargo fmt -- --check
@@ -18,7 +22,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Update Rust
-        run: rustup update nightly && rustup default nightly 
+        run: rustup update stable && rustup default stable
       - name: Install clippy
         run: rustup component add clippy
       - run: cargo clippy --all-features -- --deny warnings
@@ -28,5 +32,34 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - name: Update Rust
-        run: rustup update nightly && rustup default nightly 
+        run: rustup update stable && rustup default stable
       - run: cargo test --all-features
+
+  test-examples:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3
+      - name: Update Rust
+        run: rustup update stable && rustup default stable
+      - run: cargo test --all-features --examples
+
+  docs:
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v3
+      - name: Update Rust
+        run: rustup update stable && rustup default stable
+      - run: cargo doc
+
+  msrv:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - name: Update Rust
+        run: rustup update stable && rustup default stable
+      - name: Install cargo-binstall
+        run: curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
+      - name: Install cargo-msrv
+        run: cargo binstall -y --version 0.16.0-beta.23 cargo-msrv
+      - name: Verify the MSRV
+        run: cargo msrv verify --output-format minimal --all-features
