--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,10 +11,41 @@ edition = "2021"
 rust-version = "1.80.0"
 
 [dependencies]
-omics = { version = "0.1.0", features = ["coordinate"] }
+omics = { version = "0.2.0", features = ["coordinate", "position-u64"] }
+anyhow = { version = "1.0.89", optional = true }
+clap = { version = "4.5.20", features = ["derive"], optional = true }
+clap-verbosity-flag = { version = "2.2.2", optional = true }
+flate2 = "1.0.25"
 nonempty = "0.9.0"
+rand = { version = "0.8.5", optional = true }
+reqwest = { version = "0.12.12", features = ["blocking"], optional = true }
 rust-lapper = "1.1.0"
+tempdir = { version = "0.3.7", optional = true }
+tracing = { version = "0.1.40", optional = true }
+tracing-log = "0.2.0"
+tracing-subscriber = { version = "0.3.18", features = [
+    "env-filter",
+], optional = true }
+weighted_rand = { version = "0.4.2", optional = true }
 
 [dev-dependencies]
-flate2 = "1.0.25"
-noodles = { version = "0.35.0", features = ["core", "fasta"] }
+noodles = { version = "0.87.0", features = ["core", "fasta"] }
+tabled = { version = "0.16.0" }
+
+[features]
+default = []
+binaries = [
+    "dep:anyhow",
+    "dep:clap",
+    "dep:clap-verbosity-flag",
+    "dep:rand",
+    "dep:reqwest",
+    "dep:tempdir",
+    "dep:tracing",
+    "dep:tracing-subscriber",
+    "dep:weighted_rand",
+]
+
+[[bin]]
+name = "kitchen_sink"
+required-features = ["binaries"]
