--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ clap-verbosity-flag = { version = "2.2.2", optional = true }
 flate2 = "1.0.25"
 nonempty = "0.9.0"
 rand = { version = "0.8.5", optional = true }
+regex = "1.11.1"
 reqwest = { version = "0.12.12", features = ["blocking"], optional = true }
 rust-lapper = "1.1.0"
 tempdir = { version = "0.3.7", optional = true }
