--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -23,9 +23,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Update Rust
         run: rustup update stable && rustup default stable
-      - name: Install clippy
+      - name: Install `cargo-hack`
+        run: cargo install cargo-hack --locked
+      - name: Install `cargo clippy`
         run: rustup component add clippy
-      - run: cargo clippy --all-features -- --deny warnings
+      - run: cargo hack --each-feature clippy -- --deny warnings
 
   test:
     runs-on: ubuntu-latest
@@ -33,7 +35,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Update Rust
         run: rustup update stable && rustup default stable
-      - run: cargo test --all-features
+      - name: Install `cargo-hack`
+        run: cargo install cargo-hack --locked
+      - run: cargo hack test --each-feature
 
   test-examples:
     runs-on: ubuntu-latest
@@ -41,7 +45,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Update Rust
         run: rustup update stable && rustup default stable
-      - run: cargo test --all-features --examples
+      - name: Install `cargo-hack`
+        run: cargo install cargo-hack --locked
+      - run: cargo hack test --each-feature --examples
 
   test-compare-crossmap:
     runs-on: ubuntu-latest
@@ -65,9 +71,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Update Rust
         run: rustup update stable && rustup default stable
-      - name: Install cargo-binstall
-        run: curl -L --proto '=https' --tlsv1.2 -sSf https://raw.githubusercontent.com/cargo-bins/cargo-binstall/main/install-from-binstall-release.sh | bash
-      - name: Install cargo-msrv
-        run: cargo binstall -y --version 0.16.0-beta.23 cargo-msrv
+      - name: Install `cargo-msrv`
+        run: cargo install cargo-msrv --locked
+      - name: Install `cargo-hack`
+        run: cargo install cargo-hack --locked
       - name: Verify the MSRV
-        run: cargo msrv verify --output-format minimal --all-features
+        run: cargo msrv verify -- cargo hack --each-feature check
